Empezando el segundo día

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="row">
-      
+      <div class="column large-5">
+        <h2>Nombre del Blog</h2><br><h4>Slogan</h4>
+      </div>
+      <div class="column large-7">
+      </div>
+    </div>
+    <div class="row">
+      <div class="column large-5 small-5">
+        <form>
+          <div class="input-group">
+            <span class="input-group-label">
+              <i class="fa fa-search"></i>
+            </span>
+            <input class="input-group-field" type="text" placeholder="Email">
+          </div>
+        </form>
+      </div>
+      <div class="column large-7 small-7">
+      </div>
     </div>
 
 
