--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="1">
+    <meta http-equiv="refresh" content="111">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation for Sites</title>
@@ -11,27 +11,109 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div class="row">
-      <div class="column large-5">
-        <h2>Nombre del Blog</h2><br><h4>Slogan</h4>
+    <div class="container row column">
+      <!-- Título de la página -->
+      <div class="row">
+        <div class="column large-5">
+          <h2>Nombre del Blog</h2>
+          <h4>Neque porro quisquam est qui...</h4>
+        </div>
+        <div class="column large-7">
+        </div>
       </div>
-      <div class="column large-7">
-      </div>
-    </div>
-    <div class="row">
-      <div class="column large-5 small-5">
-        <form>
-          <div class="input-group">
-            <span class="input-group-label">
-              <i class="fa fa-search"></i>
-            </span>
-            <input class="input-group-field" type="text" placeholder="Email">
+      <!-- Cuerpo de la página -->
+      <div class="row">
+        <!-- Columna Izquierda -->
+        <div class="column large-5">
+          <!-- Barra de búsqueda -->
+          <form>
+            <div class="input-group">
+              <span class="input-group-label">
+                <i class="fa fa-search"></i>
+              </span>
+              <input class="input-group-field" type="text" placeholder="Buscar...">
+            </div>
+          </form>
+          <!-- Navegacion -->
+          <nav>
+          <ul class="vertical menu align-center">
+            <li><a href="#" class="text">Inicio</a></li>
+            <li><a href="#" class="text">Mi plato perfecto</a></li>
+            <li><a href="#" class="text">Mis recetas</a></li>
+          </ul>
+          </nav>
+          <!-- Favoritos -->
+          <div class="Favoritos">
+            <h5 class="text">Favoritos</h5>
+            <div class="row">
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito1.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito2.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito3.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+            </div>
+            <div class="row">
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito4.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito5.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+              <div class="column large-4 column-favoritos">
+                <img src="img/favorito6.jpg" alt="Favorito" class="img-favoritos">
+              </div>
+            </div>
           </div>
-        </form>
-      </div>
-      <div class="column large-7 small-7">
+          <!-- Historial -->
+          <div class="Historial">
+            <h5 class="text">Historial</h5>
+            <ul class="vertical menu">
+              <li><a href="#" class="text">Receta 1</a></li>
+              <li><a href="#" class="text">Receta 2</a></li>
+              <li><a href="#" class="text">Receta 3</a></li>
+              <li><a href="#" class="text">Receta 4</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- Columna Derecha -->
+        <div class="column large-7">
+          <!-- Entrada 1 -->
+          <div class="Entrada">
+            <h4 class="titulo-post">Título</h4>
+            <p>Fecha de entrada</p>
+            <img src="img/entrada1.jpg" alt="Imagen receta" class="img-post float-center">
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a lobortis augue. Vivamus purus diam, mattis eget metus nec, pulvinar vulputate mi. Suspendisse semper purus at justo dictum eleifend vitae sit amet arcu. Suspendisse gravida est vitae ex imperdiet, vel iaculis libero posuere. Fusce fermentum nulla nec nibh blandit mollis. Praesent auctor ante quis libero ultrices feugiat. Mauris placerat rhoncus eros sed facilisis. Ut fringilla nibh nibh, vitae efficitur est blandit quis.</p>
+            <form>
+              <div class="input-group">
+                <span class="input-group-label">
+                  <i class="fa fa-user"></i>
+                </span>
+                <input class="input-group-field" type="text" placeholder="Comentarios...">
+              </div>
+            </form>
+          </div>
+          <div class="Entrada">
+            <h4 class="titulo-post">Título</h4>
+            <p>Fecha de entrada</p>
+            <img src="img/entrada2.jpg" alt="Imagen receta" class="img-post float-center">
+            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a lobortis augue. Vivamus purus diam, mattis eget metus nec, pulvinar vulputate mi. Suspendisse semper purus at justo dictum eleifend vitae sit amet arcu. Suspendisse gravida est vitae ex imperdiet, vel iaculis libero posuere. Fusce fermentum nulla nec nibh blandit mollis. Praesent auctor ante quis libero ultrices feugiat. Mauris placerat rhoncus eros sed facilisis. Ut fringilla nibh nibh, vitae efficitur est blandit quis.</p>
+            <form>
+              <div class="input-group">
+                <span class="input-group-label">
+                  <i class="fa fa-user"></i>
+                </span>
+                <input class="input-group-field" type="text" placeholder="Comentarios...">
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
+
 
 
     <script src="js/vendor/jquery.js"></script>
